tooling/nargo_cli/tests/snapshots/execution_success/pedersen_commitment/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v3: Field, v4: Field, v5: Field, v6: Field, v7: u1):
    (no terminator instruction)
}
